Fri Jun  5 20:30:12 UTC 2020
ap/cups-filters-1.27.5-aarch64-1.txz:  Upgraded.
ap/dash-0.5.11-aarch64-1.txz:  Upgraded.
d/rust-1.44.0-aarch64-1.txz:  Upgraded.
l/librsvg-2.48.7-aarch64-1.txz:  Upgraded.
n/ethtool-5.7-aarch64-1.txz:  Upgraded.
x/xkeyboard-config-2.30-noarch-1.txz:  Upgraded.
+--------------------------+
Thu Jun  4 17:58:17 UTC 2020
ap/sqlite-3.32.2-aarch64-1.txz:  Upgraded.
ap/vim-8.2.0901-aarch64-1.txz:  Upgraded.
xap/mozilla-thunderbird-68.9.0-aarch64-1.txz:  Upgraded.
xap/vim-gvim-8.2.0901-aarch64-1.txz:  Upgraded.
+--------------------------+
Wed Jun  3 20:21:52 UTC 2020
a/dbus-1.12.18-aarch64-1.txz:  Upgraded.
a/kernel-generic-5.4.44-aarch64-1.txz:  Upgraded.
a/kernel-modules-5.4.44-aarch64-1.txz:  Upgraded.
d/bison-3.6.3-aarch64-1.txz:  Upgraded.
d/kernel-headers-5.4.44-arm64-1.txz:  Upgraded.
d/subversion-1.14.0-aarch64-1.txz:  Upgraded.
k/kernel-source-5.4.44-noarch-1.txz:  Upgraded.
l/harfbuzz-2.6.7-aarch64-1.txz:  Upgraded.
l/libcap-2.36-aarch64-1.txz:  Upgraded.
l/librsvg-2.48.6-aarch64-1.txz:  Upgraded.
n/gnutls-3.6.14-aarch64-1.txz:  Upgraded.
n/iproute2-5.7.0-aarch64-1.txz:  Upgraded.
n/iptables-1.8.5-aarch64-1.txz:  Upgraded.
xap/audacious-4.0.4-aarch64-1.txz:  Upgraded.
xap/audacious-plugins-4.0.4-aarch64-1.txz:  Upgraded.
+--------------------------+
Tue Jun  2 19:31:39 UTC 2020
a/hwdata-0.336-noarch-1.txz:  Upgraded.
ap/man-db-2.9.2-aarch64-1.txz:  Upgraded.
d/git-2.27.0-aarch64-1.txz:  Upgraded.
d/perl-5.30.3-aarch64-1.txz:  Upgraded.
d/strace-5.7-aarch64-1.txz:  Upgraded.
l/libyaml-0.2.5-aarch64-1.txz:  Upgraded.
n/ca-certificates-20200602-noarch-1.txz:  Upgraded.
n/nghttp2-1.41.0-aarch64-1.txz:  Upgraded.
n/proftpd-1.3.6d-aarch64-1.txz:  Upgraded.
+--------------------------+
Mon Jun  1 18:27:22 UTC 2020
a/pciutils-3.7.0-aarch64-1.txz:  Upgraded.
l/imagemagick-7.0.10_16-aarch64-1.txz:  Upgraded.
l/lcms2-2.10-aarch64-1.txz:  Upgraded.
l/netpbm-10.90.03-aarch64-1.txz:  Upgraded.
l/qt5-5.15.0-aarch64-1.txz:  Upgraded.