@@ -1,3 +1,9 @@
+Sun Jun 7 11:55:52 UTC 2020
+d/mercurial-5.4.1-aarch64-1.txz:  Upgraded.
+l/libzip-1.7.0-aarch64-1.txz:  Upgraded.
+n/libnftnl-1.1.7-aarch64-1.txz:  Upgraded.
+n/nftables-0.9.5-aarch64-1.txz:  Upgraded.
++--------------------------+
 Fri Jun  5 20:30:12 UTC 2020
 ap/cups-filters-1.27.5-aarch64-1.txz:  Upgraded.
 ap/dash-0.5.11-aarch64-1.txz:  Upgraded.
